--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test": "bun test",
     "test:run": "bun test --run",
     "commitlint": "commitlint --edit",
-    "release": "standard-version"
+    "release": "standard-version",
+    "lint": "biome lint src",
+    "format": "biome format --write src"
   },
   "engines": {
     "node": ">=20.0.0"
@@ -26,9 +28,10 @@
     "chalk": "^5.3.0"
   },
   "devDependencies": {
-    "@types/bun": "latest",
+    "@biomejs/biome": "2.3.1",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@types/bun": "latest",
     "standard-version": "^9.5.0",
     "tsup": "^8.3.5"
   },
