--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test:run": "bun test --run",
     "commitlint": "commitlint --edit",
     "release": "standard-version",
+    "check": "biome check --write src",
+    "ci": "biome ci src",
     "lint": "biome lint src",
     "format": "biome format --write src"
   },
@@ -31,6 +33,7 @@
     "@biomejs/biome": "2.3.1",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@evilmartians/lefthook": "^2.0.1",
     "@types/bun": "latest",
     "standard-version": "^9.5.0",
     "tsup": "^8.3.5"
