--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expo-agent-cli",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "CLI tool for accessing Expo SDK documentation and search",
   "type": "module",
   "bin": {
@@ -11,11 +11,12 @@
   ],
   "scripts": {
     "build": "tsup",
+    "postbuild": "publint",
     "dev": "tsup --watch",
     "test": "bun test",
     "test:run": "bun test --run",
     "commitlint": "commitlint --edit",
-    "release": "standard-version",
+    "release": "np",
     "check": "biome check --write src",
     "ci": "biome ci src",
     "lint": "biome lint src",
@@ -35,6 +36,8 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@evilmartians/lefthook": "^2.0.1",
     "@types/bun": "latest",
+    "np": "^10.0.4",
+    "publint": "^0.2.8",
     "standard-version": "^9.5.0",
     "tsup": "^8.3.5"
   },
@@ -48,7 +51,17 @@
     "agent",
     "sdk"
   ],
+  "packageManager": "bun@1.3.0",
   "expoVersion": "sdk-54",
-  "author": "Kazutoyo Tokai",
-  "license": "MIT"
+  "author": "Kazutoyo Tokai <kazutoyo.jp@gmail.com> (https://github.com/kazutoyo)",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kazutoyo/expo-agent-cli.git"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
+  },
+  "homepage": "https://github.com/kazutoyo/expo-agent-cli"
 }
