--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-agent-cli",
+  "name": "expo-agent-cli-root",
   "version": "0.1.3",
   "private": true,
   "description": "CLI tool for accessing Expo SDK documentation and search",
@@ -9,16 +9,16 @@
   ],
   "scripts": {
     "build": "bun run --filter '*' build",
-    "dev": "bun run --filter '@expo-agent/cli' dev",
+    "dev": "bun run --filter 'expo-agent-cli' dev",
     "test": "bun test",
     "test:run": "bun test --run",
     "commitlint": "commitlint --edit",
-    "release": "bun run --filter '@expo-agent/cli' release",
+    "release": "cd packages/cli && bun run release",
     "check": "biome check --write packages",
     "ci": "biome ci packages",
     "lint": "biome lint packages",
     "format": "biome format --write packages",
-    "build-index": "bun run --filter '@expo-agent/indexer' build-index"
+    "build-index": "bun run --filter 'expo-agent-indexer' build-index"
   },
   "engines": {
     "node": ">=20.0.0"
