--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@expo-agent/cli",
+	"name": "expo-agent-cli",
 	"version": "0.1.3",
 	"description": "CLI tool for accessing Expo SDK documentation and search",
 	"type": "module",
@@ -15,19 +15,18 @@
 		"postbuild": "publint",
 		"dev": "tsup --watch",
 		"test": "bun test",
-		"release": "np"
+		"release": "bun run build && bun run test && npm publish"
 	},
 	"engines": {
 		"node": ">=20.0.0"
 	},
 	"dependencies": {
-		"@expo-agent/core": "workspace:*",
-		"@expo-agent/search": "workspace:*",
+		"expo-agent-core": "workspace:*",
+		"expo-agent-search": "workspace:*",
 		"chalk": "^5.3.0",
 		"commander": "^14.0.0"
 	},
 	"devDependencies": {
-		"np": "^10.0.4",
 		"publint": "^0.2.8"
 	},
 	"keywords": [
@@ -45,8 +44,7 @@
 		"url": "git+https://github.com/kazutoyo/expo-agent-cli.git"
 	},
 	"publishConfig": {
-		"registry": "https://registry.npmjs.org",
-		"access": "public"
+		"registry": "https://registry.npmjs.org"
 	},
 	"homepage": "https://github.com/kazutoyo/expo-agent-cli"
 }
