--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@expo-agent/core",
+	"name": "expo-agent-core",
 	"version": "0.1.3",
 	"description": "Core utilities and parsers for Expo documentation",
 	"type": "module",
