--- a/packages/indexer/package.json
+++ b/packages/indexer/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@expo-agent/indexer",
+	"name": "expo-agent-indexer",
 	"version": "0.1.3",
 	"description": "Build search index for Expo documentation",
 	"type": "module",
@@ -15,8 +15,8 @@
 		"build-index": "bun src/cli.ts"
 	},
 	"dependencies": {
-		"@expo-agent/core": "workspace:*",
-		"@expo-agent/search": "workspace:*",
+		"expo-agent-core": "workspace:*",
+		"expo-agent-search": "workspace:*",
 		"commander": "^14.0.0"
 	},
 	"keywords": [
