--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@expo-agent/search",
+	"name": "expo-agent-search",
 	"version": "0.1.3",
 	"description": "Offline search engine for Expo documentation",
 	"type": "module",
@@ -20,7 +20,7 @@
 		"test": "bun test"
 	},
 	"dependencies": {
-		"@expo-agent/core": "workspace:*",
+		"expo-agent-core": "workspace:*",
 		"flexsearch": "^0.8.212"
 	},
 	"keywords": [
