--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Build dependencies
+        run: bun run build:core && bun run build:search
+
       - name: Run tests
         run: bun run test:run
 
